# wifinfo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-full  Makefile  README.md  buildall.sh  cli.py  default.conf  httpdev.sh  mkepfs32.py  mkerfs32.py  pio_epfs32.py  pio_erfs32.py  platformio.ini  prep_data_folder.py  runtest.sh
.github/workflows/: pio.yaml  platformio.yml  release.yml  tests.yml
dashboard/: dashboard.json  docker-compose.yaml
dashboard/wifinfo_sse/: Dockerfile  influx.py  requirements.txt
data_src/: index.htm  index.html  version
src/: EPFS.cpp  EPFS.h  ERFS.cpp  ERFS.h  cli.cpp  cli.h  config.cpp  config.h  cpuload.cpp  cpuload.h  debug.h  emptyserial.h  features.h  filesystem.cpp  filesystem.h  httpreq.cpp  httpreq.h  jsonbuilder.h  led.h  main.cpp  settings.h  sse.h  strncpy_s.h  sys.cpp  sys.h  teleinfo.h  tic.cpp  tic.h  timesync.cpp  timesync.h  update.cpp  webserver.cpp  webserver.h  wifinfo.h  wifinfo.ino
test/: CMakeLists.txt  gen_eeprom.cpp  gtest.cmake  mock.cpp  mock.h  mock_support.cpp  mock_time.cpp  mock_time.h  runtest.sh  test_config.cpp  test_eeprom.py  test_filesystem.cpp  test_led_disabled.cpp  test_led_enabled.cpp  test_notifs.cpp  test_support.cpp  test_sys.cpp  test_teleinfo.cpp  test_tic.cpp
test/support/: Arduino.h  ArduinoOTA.h  EEPROM.h  ESP8266HTTPClient.h  ESP8266WebServer.h  ESP8266WiFi.h  FS.h  PolledTimeout.h  WiFiClient.h  user_interface.h
tools/: cli.py  default.conf  eeprom.py  httpdev.sh  mkarduinosrc.py  read_sse.py  simutic.py  srv.py  sse.py
tools/dashboard/: .gitignore
tools/dashboard/wifinfo_sse/: influx.py
web/: default.conf  httpdev.sh  srv.py
